<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignupFragment"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:text="@string/please_sign_up"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/email_TIL_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_TIL_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/password_TIL_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_TIE_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_TIL_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/SignupBtn_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_TIL_id"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_TIE_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/SignupBtn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/paragraph_text_id"
            app:layout_constraintEnd_toEndOf="@+id/password_TIL_id"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/password_TIL_id"
            app:layout_constraintTop_toBottomOf="@+id/password_TIL_id" />

        <TextView
            android:id="@+id/paragraph_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="251dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_link_text_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignupBtn_id" />

        <TextView
            android:id="@+id/login_link_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="251dp"
            android:text="@string/log_in"
            android:textColor="#18256C"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paragraph_text_id"
            app:layout_constraintTop_toTopOf="@+id/paragraph_text_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>